--- a/EmployeeManagementSystem_groupB/src/main/resources/application.properties
+++ b/EmployeeManagementSystem_groupB/src/main/resources/application.properties
@@ -4,3 +4,6 @@ spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/test?useUnicode=true&characterEncoding=utf-8&useSSL=false
 spring.datasource.username=root
 spring.datasource.password=
+
+file.upload.path=C://images/
+file.upload.path.relative=/images/**
